[gd_scene load_steps=52 format=3 uid="uid://drwl87p4l7plp"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_epcyd"]
[ext_resource type="Texture2D" uid="uid://yp40ab3diini" path="res://Assets/Image20250317122304.png" id="2_tp4p4"]
[ext_resource type="Texture2D" uid="uid://ggydf13nn61h" path="res://Assets/Kings and Pigs/Sprites/01-King Human/Door In (78x58).png" id="3_x0ssv"]
[ext_resource type="Script" path="res://scripts/aetherium_bar.gd" id="6_vy7rg"]
[ext_resource type="Texture2D" uid="uid://bkqkmukbgqxpn" path="res://Assets/zjump.png" id="7_603et"]
[ext_resource type="Script" path="res://scripts/static_body_2d.gd" id="7_xm5jh"]
[ext_resource type="Texture2D" uid="uid://c7rkb5ntn0x47" path="res://Assets/Image20250318094132.png" id="8_1jtqy"]
[ext_resource type="Shader" path="res://scripts/vignette.gdshader" id="9_36x3k"]
[ext_resource type="Script" path="res://scripts/health_bar.gd" id="9_gh1ys"]
[ext_resource type="Texture2D" uid="uid://bqmlsuwr2r3p5" path="res://Assets/xatk.png" id="9_knah1"]
[ext_resource type="Texture2D" uid="uid://73y2gxau5xg8" path="res://Assets/right.png" id="10_8lpdv"]
[ext_resource type="PackedScene" uid="uid://bqehxq5lfqamu" path="res://scenes/aetherium bar.tscn" id="11_2wesi"]
[ext_resource type="Texture2D" uid="uid://yd0w47rcydgb" path="res://Assets/left.png" id="11_ttijc"]
[ext_resource type="AudioStream" uid="uid://dw6httix81a3c" path="res://Assets/Jump.wav" id="14_t13j0"]
[ext_resource type="AudioStream" uid="uid://c8prusqjv45pq" path="res://Assets/Pickaxe.wav" id="15_4esvw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m84vq"]
size = Vector2(28, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_0g5rn"]
atlas = ExtResource("2_tp4p4")
region = Rect2(0, 800, 270, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7oaw"]
atlas = ExtResource("2_tp4p4")
region = Rect2(270, 800, 270, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_77tiv"]
atlas = ExtResource("2_tp4p4")
region = Rect2(0, 960, 270, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_8k038"]
atlas = ExtResource("3_x0ssv")
region = Rect2(0, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yss6"]
atlas = ExtResource("3_x0ssv")
region = Rect2(78, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlfog"]
atlas = ExtResource("3_x0ssv")
region = Rect2(156, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqxgm"]
atlas = ExtResource("3_x0ssv")
region = Rect2(234, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf4jg"]
atlas = ExtResource("3_x0ssv")
region = Rect2(312, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfh6l"]
atlas = ExtResource("3_x0ssv")
region = Rect2(390, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vqbi"]
atlas = ExtResource("3_x0ssv")
region = Rect2(468, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvh2i"]
atlas = ExtResource("3_x0ssv")
region = Rect2(546, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eail"]
atlas = ExtResource("2_tp4p4")
region = Rect2(0, 160, 270, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfepa"]
atlas = ExtResource("2_tp4p4")
region = Rect2(270, 160, 270, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulwpm"]
atlas = ExtResource("2_tp4p4")
region = Rect2(0, 1120, 270, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1yli"]
atlas = ExtResource("2_tp4p4")
region = Rect2(270, 1120, 270, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8o0y"]
atlas = ExtResource("2_tp4p4")
region = Rect2(0, 1280, 270, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_jocrx"]
atlas = ExtResource("2_tp4p4")
region = Rect2(270, 1280, 270, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtlrf"]
atlas = ExtResource("2_tp4p4")
region = Rect2(0, 1440, 270, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_oinxv"]
atlas = ExtResource("2_tp4p4")
region = Rect2(270, 1440, 270, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n0j1"]
atlas = ExtResource("2_tp4p4")
region = Rect2(0, 1600, 270, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgqap"]
atlas = ExtResource("2_tp4p4")
region = Rect2(270, 1600, 270, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8jo1"]
atlas = ExtResource("2_tp4p4")
region = Rect2(0, 0, 270, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_usabf"]
atlas = ExtResource("2_tp4p4")
region = Rect2(270, 0, 270, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_goowp"]
atlas = ExtResource("2_tp4p4")
region = Rect2(270, 640, 270, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf06u"]
atlas = ExtResource("2_tp4p4")
region = Rect2(0, 320, 270, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_5x8lh"]
atlas = ExtResource("2_tp4p4")
region = Rect2(270, 320, 270, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_id1hv"]
atlas = ExtResource("2_tp4p4")
region = Rect2(0, 480, 270, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl841"]
atlas = ExtResource("2_tp4p4")
region = Rect2(270, 480, 270, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_u2v0e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0g5rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7oaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77tiv")
}],
"loop": false,
"name": &"attack",
"speed": 21.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8k038")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yss6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlfog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqxgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf4jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfh6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vqbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvh2i")
}],
"loop": true,
"name": &"climb",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfepa")
}],
"loop": false,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulwpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1yli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8o0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jocrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtlrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oinxv")
}],
"loop": false,
"name": &"death1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7n0j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgqap")
}],
"loop": false,
"name": &"death2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8jo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usabf")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_goowp")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf06u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x8lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_id1hv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl841")
}],
"loop": true,
"name": &"run",
"speed": 16.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6xf7a"]
shader = ExtResource("9_36x3k")
shader_parameter/inner_radius = 0.01
shader_parameter/outer_radius = 1.0
shader_parameter/vignette_strength = 0.0
shader_parameter/dither_strength = 0.03
shader_parameter/vignette_color = null

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r46e0"]
size = Vector2(26, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vqa8m"]
size = Vector2(20, 10)

[sub_resource type="Animation" id="Animation_dinl1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Zjump:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Xatk:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Right:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Left:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_npfp2"]
resource_name = "zjump"
length = 12.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Zjump:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4, 10.0333, 12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Xatk:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4, 10.0333, 12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Right:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4, 10.0333, 12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Left:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4, 10.0333, 12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l3sy8"]
_data = {
"RESET": SubResource("Animation_dinl1"),
"zjump": SubResource("Animation_npfp2")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
script = ExtResource("1_epcyd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, 12)
shape = SubResource("RectangleShape2D_m84vq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 8
position = Vector2(-78.9704, -31.2062)
scale = Vector2(0.207407, 0.24375)
sprite_frames = SubResource("SpriteFrames_u2v0e")
animation = &"run"
frame_progress = 0.700008
offset = Vector2(347, 167)
flip_h = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="ColorRect" type="ColorRect" parent="Camera2D/CanvasLayer"]
z_index = -35
material = SubResource("ShaderMaterial_6xf7a")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimatedSprite2D2" parent="Camera2D/CanvasLayer" instance=ExtResource("11_2wesi")]
show_behind_parent = true
top_level = true
z_index = 10
position = Vector2(422.75, 91.1875)
scale = Vector2(0.360227, 0.386693)
script = ExtResource("6_vy7rg")

[node name="HealthBar" type="ProgressBar" parent="."]
self_modulate = Color(0, 0.735584, 0.346493, 1)
offset_left = -41.0
offset_top = -23.0
offset_right = 107.0
offset_bottom = 4.0
scale = Vector2(0.5, 0.5)
max_value = 10.0
show_percentage = false
script = ExtResource("9_gh1ys")

[node name="Label" type="Label" parent="HealthBar"]
layout_mode = 0
offset_left = 52.0
offset_top = 2.0
offset_right = 92.0
offset_bottom = 25.0
text = "100"
horizontal_alignment = 1

[node name="AttackArea" type="Area2D" parent="."]

[node name="right" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(21.5, 17)
shape = SubResource("RectangleShape2D_r46e0")
disabled = true

[node name="left" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-32, 16.5)
shape = SubResource("RectangleShape2D_r46e0")
disabled = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(2000, 200)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(907, 140)
scale = Vector2(2, 2)
texture = ExtResource("8_1jtqy")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
script = ExtResource("7_xm5jh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-6, -28)
shape = SubResource("RectangleShape2D_vqa8m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="StaticBody2D"]
libraries = {
"": SubResource("AnimationLibrary_l3sy8")
}

[node name="Zjump" type="Sprite2D" parent="StaticBody2D"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-16, -32)
scale = Vector2(0.128125, 0.128125)
texture = ExtResource("7_603et")

[node name="Xatk" type="Sprite2D" parent="StaticBody2D"]
modulate = Color(1, 1, 1, 0)
position = Vector2(14.325, -31.55)
scale = Vector2(0.133438, 0.131875)
texture = ExtResource("9_knah1")

[node name="Right" type="Sprite2D" parent="StaticBody2D"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-26, 17)
scale = Vector2(0.12, 0.12)
texture = ExtResource("10_8lpdv")

[node name="Left" type="Sprite2D" parent="StaticBody2D"]
modulate = Color(1, 1, 1, 0)
position = Vector2(27, 17)
scale = Vector2(0.12, 0.12)
texture = ExtResource("11_ttijc")

[node name="jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_t13j0")

[node name="attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_4esvw")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
